--- a/src/states/CMakeLists.txt
+++ b/src/states/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_fsm_state_simple(SampleCommunicationController_Initial)
+add_fsm_state_simple(ROSPostureState)
+target_link_libraries(ROSPostureState PUBLIC mc_rtc::mc_rtc_ros mc_sample_communication::ROS)
 
 add_fsm_data_directory(data)
